--- a/README
+++ b/README
@@ -5,9 +5,8 @@ This is a very early (read alpha) work of Perl Bindings for Selenium
 Selenium. Please use WWW::Selenium from CPAN if you're interested in
 1.0 bindings. 
 
-The wire protocol is going to change soon in Selenium remote server
-implementation & this code is currently only going to work with 
-alpha1 release of Selenium Remote Server. 
+The wire protocol has changed for Selenium remote server since alpha1 & 
+this code is currently only going to work with alpha2 release of the server. 
 
 Some of the code & most of the test suites are pretty much boiler 
 plate, so if you really want to play with bleeding edge code, download 
