Added extra note to notify that this is not ready for general use yet.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+*** NOTE: This is not yet ready for end user to use ****
+
 Perl Bindings for Selenium 2.0 Remote Driver
 
 This is a very early (read alpha) work of Perl Bindings for Selenium 
