--- a/README
+++ b/README
@@ -1,16 +1,14 @@
 *** NOTE: Most of the JSON Wire Protocol http://code.google.com/p/selenium/wiki/JsonWireProtocol
 *** 	  has been implemented. This is still beta quality code.
 
-Perl Bindings for Selenium 2.0 Remote Driver
+Perl Bindings for Selenium 2.0 Remote WebDriver
 
-This is a Perl Binding for Selenium 2.0 Remote Driver, which you should download
+This is a Perl Binding for Selenium 2.0 Remote WebDriver, which you should download
 from http://code.google.com/p/selenium; look for selenium-server-standalone.jar.
 This binding will not work with the 1.0 version of Selenium. Please use
 WWW::Selenium from CPAN if you're interested in 1.0 bindings. 
 
-Bumped up the version to 0.10 and this should work with beta1 release of
-Selenium 2.0. The unit tests provide some examples on how to invoke the Driver
-& use the module.
+The unit tests provide varioud examples on how to invoke & use the module.
 
 INSTALLATION
 
@@ -20,13 +18,14 @@ To install this module, run the following commands:
 	make
 	make test
 	make install
-
+	
 SUPPORT AND DOCUMENTATION
 
 After installing, you can find documentation for this module with the
 perldoc command.
 
     perldoc Selenium::Remote::Driver
+    perldoc Selenium::Remote::WebElement
 
 Please file all bugs for this module at:
     
@@ -34,11 +33,17 @@ Please file all bugs for this module at:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2010 "Aditya Ivaturi"
+Copyright (c) 2010-2011 Aditya Ivaturi, Gordon Child
 
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
 
-See http://dev.perl.org/licenses/ for more information.
+     http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
 
