--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Selenium-Remote-Driver
 
+0.15   3-8-2012
+        - execute_script() can return web elements for data structures
+          (arrays for .e.g.).
+        - The error messages are now a little more descriptive in cases of
+          "UNKNOWN ERROR".
+        - Fixed the carp 1.25 related issue in tests.
+
 0.14   3-1-2012
         - Added method send_keys_to_active_element() in driver
         - Added method get_sessions()
