--- a/Changes
+++ b/Changes
@@ -1,15 +1,24 @@
 Revision history for Selenium-Remote-Driver
 0.18   7-26-2013
+        [NEW FEATURES]
+        - Added a pause() function, that sleeps for the given number of milliseconds, just like
+          Test::WWW::Selenium.  https://github.com/aivaturi/Selenium-Remote-Driver/issues/60
+
+        - new() now accepts a 'default_finder' option to allow to you change the default finder, which
+          is currently 'xpath'. This will be of interest to those who prefer CSS-style selectors,
+          such as jQuery uses.
+           https://github.com/aivaturi/Selenium-Remote-Driver/pull/49
+
+        [DOCUMENTATION]
+        - Updated ChangeLog to reflect that debug_on() and debug_off() methods were added in 0.16.
+
+        [INTERNALS]
         - Explained why the code does 'use 5.006; use v5.10.0;', and it's not pretty.
            The short version: before perl 5.006, the v-string 'v5.10.0' would not be understood.
            The page http://www.dagolden.com/index.php/369/version-numbers-should-be-boring/
            explains it in much more detail than I can.
            Fortunately, it boils down to this: http://perldoc.perl.org/5.10.0/functions/use.html#use-VERSION
-        - Added the change from mach-mme-stst that lets you set the default finder to something besides xpath.
-           https://github.com/aivaturi/Selenium-Remote-Driver/pull/49
-        - Added a pause() function, that sleeps for the given number of milliseconds, just like
-          Test::WWW::Selenium.  https://github.com/aivaturi/Selenium-Remote-Driver/issues/60
-        - Updated ChangeLog to reflect that debug_on() and debug_off() methods were added in 0.16.
+
 
 
 0.17   7-13-2013
