--- a/Changes
+++ b/Changes
@@ -17,6 +17,11 @@ Revision history for Selenium-Remote-Driver
         - Merged Test::WebDriver into this distribution as Test::Selenium::Remote::Driver.
           Several updates to it are included since the last release. (Mark Stosberg)   
 
+        - The existence of most (or all?) key testing methods in
+          Test::Selenium::Remote::Driver is now documented, rather than leaving it to users
+          to figure out the magic effects of AUTOLOAD on the methods in the parent
+          class. (Mark Stosberg)
+
         - Added and started using Test::Selenium::Remote::WebElement. This a
           sub-class of Selenium::Remote::WebElement. This allows testing
           methods on the "WebElement" object as well as main '$driver' object.
