Start updating Changes file for v0.28

--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Selenium-Remote-Driver
 
+0.28   04-08-2016
+        (bundled firefox driver version: 2.48.2)
+
+        [NEW FEATURES]
+        - #259 Allow users to pass in existing FF profile dir
+
+        [BUG FIXES]
+        - #260 Update firefox driver artifacts to 2.53.0
+
 0.2701 01-11-2016
         (firefox driver version: 2.48.2)
 
