Fix #339: Use TestingMania, update github repo author
remove tabs from some html test data

Bring POD into compliance with Test::Pod::Coverage

Make SYNOPSIS compile in POD

Remove useless copy of jquery

Whitespace fixes

fix POD links

strictures/warnings enabled in all PMs

Remove Git:: plugins in dist.ini, More hassle than they are worth

Rearrange dist.ini to not do some things that made tests fail

Add deps for pod checker to .travis.yml, this was dumb on earlier perls

Remove SYNOPSIS from Selenium::CanStartBinary, it doesn't compile
On early perls.  It's also silly to use as an example given the
existing subclasses are more than adequate as examples.

Don't use yaddas in synopses, they don't compile on early perls

--- a/Changes
+++ b/Changes
@@ -1,6 +1,17 @@
 Revision history for Selenium-Remote-Driver
 
-1.20   05-54-2017
+1.21   08-??-27 TEODESIAN
+        [NEW MAINTAINER]
+        - George S. Baugh (@teodesian on github, TEODESIAN on CPAN) is now the maintainer.
+
+        [BUG FIXES]
+        - Fix warnings thrown in release testsuite by unescaped regexes on perl 5.24
+        - Expand POD for some modules
+
+        [DEPRECATIONS]
+        - Selenium::Remote::Driver::pause() - There are plenty of other ways to sleep().
+
+1.20   05-25-2017
         [BUG FIXES]
         - Shim use of name as find method for geckodriver
         - Start up geckodriver/binary Firefox properly
@@ -443,5 +454,6 @@ Revision history for Selenium-Remote-Driver
         supported as the server itself is alpha & mocking its behavior doesn't
         help our cause.
         - Added POD for Driver & WebElement
+
 0.01    2-21-2010
-        First version, released on an unsuspecting world.
+        - First version, released on an unsuspecting world.
