--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Selenium-Remote-Driver
 1.25   02-15-2018 TEODESIAN
         [BUG FIXES]
         - Fix issue where only <form> elements and not <input> elements could be submit()ted.
+        - Force chrome into using JSONWire style capabilities passing, as WC3 style is just horribly broken on chromedriver.
 
 1.24   02-12-2018 TEODESIAN
         [BUG FIXES]
