--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Selenium-Remote-Driver
 1.28   ??-??-???? TEODESIAN
         [BUG FIXES]
         - Fix incorrect documentation of constructor fields.
+        - Fix chrome maximize() polyfill
 
 1.27   03-25-2018 TEODESIAN
         [BUG FIXES]
