--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@ Revision history for Selenium-Remote-Driver
         [BUG FIXES]
         - Fixed Test::Selenium::* direct usage modules from getting undef method errors when acting on WebElements
         - Fixed issue where capabilities could not be passed with Selenium::Firefox
+        - Make it actually possible for find_element_ok to fail without dying
 
 1.28   06-05-2018 TEODESIAN
         [BUG FIXES]
