--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Selenium-Remote-Driver
 1.29   ??-??-???? TEODESIAN
         [New Features]
         - Selenium::Edge and Test::Selenium::Edge now exist
+        - Pass caller argument array as final arg to error_handler callbacks
         [BUG FIXES]
         - Fixed Test::Selenium::* direct usage modules from getting undef method errors when acting on WebElements
         - Fixed issue where capabilities could not be passed with Selenium::Firefox
