--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Selenium-Remote-Driver
         [New Features]
         - Selenium::Edge and Test::Selenium::Edge now exist
         - Pass caller argument array as final arg to error_handler callbacks
+        - Add child() and children() aliases to Selenium::Remote::WebElements
         [BUG FIXES]
         - Fixed Test::Selenium::* direct usage modules from getting undef method errors when acting on WebElements
         - Fixed issue where capabilities could not be passed with Selenium::Firefox
